--- a/Stage-03/Project-01/style.css
+++ b/Stage-03/Project-01/style.css
@@ -1,16 +1,15 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body, input, select, textarea, button {
+body, input, button, select, textarea {
   font-family: 'Poppins', sans-serif;
 }
 
 body {
   background: #E5E5E5;
-  font-family: 'Poppins', sans-serif;
 }
 
 body::before {
@@ -32,7 +31,8 @@ body::before {
 
 header {
   width: 319px;
-  margin-top: 80px;
+
+  margin-top: 74px;
 }
 
 header h1 {
@@ -40,7 +40,7 @@ header h1 {
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
-  color: #FFFFFF;
+  color: white;
 
   margin-bottom: 24px;
 }
@@ -53,12 +53,11 @@ header p {
 }
 
 form {
-  margin-top: 42px;
-
+  margin-top: 38px;
   background: #FAFAFC;
+  border-radius: 8px;
   min-height: 300px;
 
-  border-radius: 8px 8px 0px 0px;
   padding: 64px;
 }
 
@@ -78,12 +77,10 @@ fieldset legend {
   font-size: 24px;
   line-height: 34px;
 
-  color: #32264D;
+  width: 100%;
 
   border-bottom: 1px solid #E6E6F0;
-
   padding-bottom: 16px;
-  width: 100%;
 }
 
 .input-wrapper {
@@ -95,24 +92,30 @@ fieldset legend {
   font-size: 14px;
   line-height: 24px;
 
-  color: #4E4958; 
+  color: #4E4958;
 
   margin-bottom: 8px;
 }
 
 .input-wrapper label span {
+  margin-left: 12px;
+
   font-size: 12px;
   line-height: 20px;
-
-  color: #6c6a71;
-
-  margin-left: 12px;
+  
+  color: #a9a7af;
 }
 
-.input-wrapper input, .input-wrapper textarea {
+.input-wrapper label span:hover {
+  color: #6c6a71;
+}
+
+.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
+  background: #FAFAFC;
+
   border: 1px solid #E6E6F0;
   border-radius: 8px;
-
+  
   height: 56px;
 
   padding: 0 24px;
@@ -125,6 +128,14 @@ fieldset legend {
 
 .input-wrapper textarea {
   padding: 0;
-
   height: 168px;
+}
+
+.input-wrapper select {
+  appearance: none;
+  -webkit-appearance: none;
+
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: right 24px top 50%;
 }
